Evaluate all hard constraints